book 엔티티 생성

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -36,6 +36,7 @@
     "languages": ["ko"],
     "blueprints": [],
     "skipClient": true,
-    "skipUserManagement": true
+    "skipUserManagement": true,
+    "lastLiquibaseTimestamp": 1675343123000
   }
 }
