--- a/build.gradle
+++ b/build.gradle
@@ -309,6 +309,9 @@ dependencies {
     liquibaseRuntime "com.h2database:h2"
     testImplementation "org.testcontainers:kafka"
     //jhipster-needle-gradle-dependency - JHipster will add additional dependencies here
+
+    implementation 'org.projectlombok:lombok:1.18.20'
+    implementation 'org.projectlombok:lombok:1.18.20'
 }
 
 if (project.hasProperty("gae")) {
